force-app/main/default/objects/Invoice__c/fields/Amount_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_After_Discount__c</fullName>
    <description>Store the amount after discount</description>
    <label>Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>