force-app/main/default/objects/Invoice__c/fields/Amounts_are__c.field-meta.xml
<CustomField>
    <fullName>Amounts_are__c</fullName>
    <label>Amounts are</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive of Tax</fullName>
            </value>
            <value>
                <fullName>Inclusive of Tax</fullName>
            </value>
            <value>
                <fullName>Out of scope of Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>