force-app/main/default/objects/Invoice__c/fields/Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_URL__c</fullName>
    <description>Attachment Access Public Url</description>
    <label>Attachment URL</label>
    <type>TextArea</type>
</CustomField>