force-app/main/default/objects/Invoice__c/fields/Authorized_Sign__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Sign__c</fullName>
    <label>Authorized Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>