force-app/main/default/objects/Invoice__c/fields/Balance_Amount_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_to_be_Paid__c</fullName>
    <formula>IF((Sum_Of_Amount_With_GST__c  -  Sum_of_Paid_Amount__c)&gt;0, Sum_Of_Amount_With_GST__c  -  Sum_of_Paid_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount to be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>