force-app/main/default/objects/Invoice__c/fields/Create_Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Create_Journal_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To create automated journal entry when invoice record is created.</description>
    <label>Create Journal Entry</label>
    <type>Checkbox</type>
</CustomField>