force-app/main/default/objects/Invoice__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - US Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>GBP - British Pound</fullName>
            </value>
            <value>
                <fullName>INR - Indian Rupee</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>