force-app/main/default/objects/Invoice__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>TEXT(Account__r.Preferred_Currency_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>