force-app/main/default/objects/Invoice__c/fields/Discount_Mode__c.field-meta.xml
<CustomField>
    <fullName>Discount_Mode__c</fullName>
    <description>Used to indicate whether the discount mode is Line Item or Lump Sum.</description>
    <label>Discount Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line Item Discount</fullName>
            </value>
            <value>
                <fullName>Lumpsum Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>