force-app/main/default/objects/Invoice__c/fields/Email_Bcc__c.field-meta.xml
<CustomField>
    <fullName>Email_Bcc__c</fullName>
    <label>Email Bcc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>