force-app/main/default/objects/Invoice__c/fields/Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Email_CC__c</fullName>
    <label>Email CC</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>