force-app/main/default/objects/Invoice__c/fields/Email_View_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_View_Count__c</fullName>
    <label>Email View Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>