force-app/main/default/objects/Invoice__c/fields/Formula_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Formula_Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Contact Email</label>
    <type>Text</type>
</CustomField>