force-app/main/default/objects/Invoice__c/fields/Invoice_Footer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Footer__c</fullName>
    <label>Invoice Footer</label>
    <type>TextArea</type>
</CustomField>