force-app/main/default/objects/Invoice__c/fields/Invoice_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Indicator__c</fullName>
    <description>To storing invoice indicator for zatca</description>
    <label>Invoice Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nominal</fullName>
            </value>
            <value>
                <fullName>Self Billed</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>