force-app/main/default/objects/Invoice__c/fields/Invoice_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name_Type__c</fullName>
    <label>Invoice Name Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Simplified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>