force-app/main/default/objects/Invoice__c/fields/Invoice_status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Invoice status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>