force-app/main/default/objects/Invoice__c/fields/Lumpsum_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lumpsum_Discount_Amount__c</fullName>
    <description>Used to store Lumpsum Discount amount</description>
    <label>Lumpsum Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>