force-app/main/default/objects/Invoice__c/fields/Lumpsum_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Lumpsum_Discount_Percentage__c</fullName>
    <description>Used to store Lumpsum Discount Percentage</description>
    <label>Lumpsum Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>