force-app/main/default/objects/Invoice__c/fields/Message_Of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Message_Of_Invoice__c</fullName>
    <label>Message Of Invoice</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>