force-app/main/default/objects/Invoice__c/fields/PlaceOfSupply__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfSupply__c</fullName>
    <description>To store the country value of the placeOfSupply</description>
    <label>PlaceOfSupply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>