force-app/main/default/objects/Invoice__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <label>QR Code</label>
    <type>TextArea</type>
</CustomField>