force-app/main/default/objects/Invoice__c/fields/Sum_Of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Amount__c</fullName>
    <label>Sum Of Amount</label>
    <summarizedField>Invoice_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>