force-app/main/default/objects/Invoice__c/fields/Sum_of_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Paid_Amount__c</fullName>
    <label>Sum of Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>