force-app/main/default/objects/Invoice__c/fields/Terms_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Condition__c</fullName>
    <label>Terms And Condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>