force-app/main/default/objects/Invoice__c/fields/To_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>To_Email_Addresses__c</fullName>
    <description>To indicate the TO email addresses</description>
    <label>To Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>